--- a/tantofaz/brunoaleixo2.0.html
+++ b/tantofaz/brunoaleixo2.0.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" href= "css/stylesheet1.css">
+<link rel="stylesheet" href= "https://github.com/BeatrizAmparo/brunoaleixo2.0/blob/main/tantofaz/css/stylesheet1.css">
 <head>
   <title>Bruno Aleixo</title>
   <meta charset="utf-8">
